# wordsea

./: .gitignore  README.md  compose.yaml  pyproject.toml  requirements.txt  tox.ini
app/: .env  .gitignore  Dockerfile  entrypoint.sh  package-lock.json  package.json  tailwind.config.js
app/src/: app.css
app/src/lib/: typesense.ts
app/src/lib/components/: SEO.svelte  about.svelte  dailyImage.svelte  definition.svelte  derivation.svelte  footer.svelte  mnemonicImages.svelte  navbar.svelte  randomWordButton.svelte  recordingPlayer.svelte  search.svelte  themeSwitch.svelte  wordsList.svelte
app/src/lib/server/: database.ts  loader.ts
app/src/lib/types/: FSLink.ts  Meaning.ts  Mnemonic.ts
app/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
app/src/routes/api/image/: +server.ts
app/src/routes/api/random/: +server.ts
app/src/routes/word/[word]/: +page.server.ts  +page.svelte
app/src/routes/words/[word]/: +page.server.ts  +page.svelte
dictionary/: clean.py  find.py
dictionary/templates/: definition.html
models/: generate.py
wordsea/: __init__.py  constants.py
wordsea/db/: __init__.py  schema.py  utils.py
wordsea/dictionary/: __init__.py  clean.py  find.py  stopwords.txt
wordsea/dictionary/clean/: __init__.py  constraints.py  entry.py  index.py  stream.py
wordsea/dictionary/templates/: definition.html  prompt-derived.html  prompt.html
wordsea/scripts/: __init__.py  clean.py  find.py  generate.py  imagine.py
