[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wordsea"]

[project]
name = "wordsea"
version = "0.0.0"
dependencies = [
    "accelerate",
    "beautifulsoup4",
    "click",
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "jinja2",
    "jsonschema",
    "ninja",
    "mongoengine",
    "pandas",
    "peft",
    "requests",
    "sentencepiece",
    "tqdm",
    "torch>=2.1.2",
    "transformers",
    "triton>=2.1.0",
    "typesense",
    "xformers>=0.0.22",
    # "stable-fast @ git+https://github.com/chengzeyi/stable-fast.git",
]
requires-python = ">=3.10"
description = "Expand your vocabulary with wordsea!"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.scripts]
wordsea = "wordsea:main"

[tool.ruff]
ignore = ["C901", "E501"]
select = ["B", "C", "E", "F", "I", "PD", "PTH", "RUF", "W"]
ignore-init-module-imports = true
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["wordsea"]

[tool.mypy]
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true

show_error_codes = true
enable_error_code = ["ignore-without-code"]
ignore_missing_imports = true
strict_optional = false
warn_return_any = false
allow_redefinition = true
