[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wordsea"]

[project]
name = "wordsea"
version = "0.0.0"
dependencies = [
    "accelerate",
    "beautifulsoup4",
    "click",
    "diffusers",
    "jinja2",
    "jsonschema",
    "ninja",
    "mongoengine",
    "pandas",
    "peft",
    "requests",
    "sentencepiece",
    "tqdm",
    "torch>=2.1.2",
    "transformers",
    "triton>=2.1.0",
    "typesense",
    "wheel",
    "xformers>=0.0.22",
    "protobuf>=6.30.2",
    "setuptools>=78.1.0",
]
requires-python = ">=3.12"
description = "Expand your vocabulary with wordsea!"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.scripts]
wordsea = "wordsea:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["C901", "E501"]
select = ["B", "C", "E", "F", "I", "PD", "PTH", "RUF", "W"]
ignore-init-module-imports = true
isort.known-first-party = ["wordsea"]

[tool.mypy]
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true

show_error_codes = true
enable_error_code = ["ignore-without-code"]
ignore_missing_imports = true
strict_optional = false
warn_return_any = false
allow_redefinition = true
